[initial commit to git online repo]

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-inner" data-ng-controller="HeaderController">
     <ul class="nav">
         <li>
-            <a class="brand" ui-sref="home">MEAN - A Modern Stack</a>
+            <a class="brand" ui-sref="home">One Click Order </a>
         </li>
         <li data-ng-repeat="item in menu" data-ng-show="global.user" ui-route="/{{item.link}}" ng-class="{active: $uiRoute}">
             <a ui-sref="{{item.state}}">{{item.title}}</a>
